新增可移动图片顺序

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "analysis": "vue-cli-service build --report"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
-    "file-saver": "^2.0.5",
+    "element-ui": "^2.15.6",
     "jspdf": "^2.5.0",
     "vue": "^2.6.11"
   },
